# temper

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.txt  HELP.txt  INSTALL.txt  JucePluginHost-temper.filtergraph  Makefile  README.md  appveyor.yml  mxzero.jucer  temper.jucer
Dsp/: Makefile  (+3 more)
VST3_SDK/public.sdk/samples/vst/InterAppAudio/: CMakeLists.txt
VST3_SDK/public.sdk/samples/vst/InterAppAudio/InterAppAudioExample/: InterAppAudioExample-Prefix.pch  NoteExpressionSynthExample.plist  VSTInterAppAudioAppDelegate.h  VSTInterAppAudioAppDelegate.mm  VSTInterAppAudioHostUIControllerViewController.h  VSTInterAppAudioHostUIControllerViewController.mm  main.m
VST3_SDK/public.sdk/samples/vst/InterAppAudio/config/: InterAppAudioExample.xcconfig  InterAppAudioExample_Debug.xcconfig  InterAppAudioExample_Release.xcconfig
VST3_SDK/public.sdk/samples/vst/adelay/: CMakeLists.txt
VST3_SDK/public.sdk/samples/vst/adelay/mac/: Info.plist
VST3_SDK/public.sdk/samples/vst/adelay/source/: adelaycontroller.cpp  adelaycontroller.h  adelayids.h  adelayprocessor.cpp  adelayprocessor.h  exampletest.cpp  exampletest.h  factory.cpp  version.h
VST3_SDK/public.sdk/samples/vst/adelay/win/: adelay.sln  adelay.vcxproj  adelay_vc10.sln  adelay_vc10.vcxproj  adelay_vc10.vcxproj.filters
VST3_SDK/public.sdk/samples/vst/again/: CMakeLists.txt
VST3_SDK/public.sdk/samples/vst/again/mac/: Info again simple.plist  Info.plist
VST3_SDK/public.sdk/samples/vst/again/resource/: again.rc  again.uidesc
VST3_SDK/public.sdk/samples/vst/again/source/: again.cpp  again.h  againcids.h  againcontroller.cpp  againcontroller.h  againeditor.cpp  againeditor.h  againentry.cpp  againentry_vst2.cpp  againparamids.h  againprocess.h  againsidechain.cpp  againsidechain.h  againsimple.cpp  againsimple.h  againuimessagecontroller.h  version.h
VST3_SDK/public.sdk/samples/vst/again/win/: again.sln  again.vcxproj  again.vcxproj.filters  again_vc10.sln  again_vc10.vcxproj  again_vc10.vcxproj.filters  again_vst2.def  again_vst2.sln  again_vst2.vcxproj  again_vst2.vcxproj.filters  again_vst2_vc10.sln  again_vst2_vc10.vcxproj  again_vst2_vc10.vcxproj.filters  againsimple.sln  againsimple.vcxproj  againsimple_v10.sln  againsimple_vc10.vcxproj
VST3_SDK/public.sdk/samples/vst/channelcontext/: CMakeLists.txt
VST3_SDK/public.sdk/samples/vst/channelcontext/mac/: Info.plist
VST3_SDK/public.sdk/samples/vst/channelcontext/source/: plug.cpp  plug.h  plugcids.h  plugcontroller.cpp  plugcontroller.h  plugentry.cpp  plugparamids.h  version.h
VST3_SDK/public.sdk/samples/vst/channelcontext/win/: TestChannelContext.vcxproj  TestChannelContext.vcxproj.filters  plug_vc12.sln
VST3_SDK/public.sdk/samples/vst/hostchecker/: CMakeLists.txt
VST3_SDK/public.sdk/samples/vst/hostchecker/mac/: info.plist
VST3_SDK/public.sdk/samples/vst/hostchecker/resource/: hostchecker.uidesc
VST3_SDK/public.sdk/samples/vst/hostchecker/resources/: hostchecker.uidesc
VST3_SDK/public.sdk/samples/vst/hostchecker/source/: dirtyflagcontroller.cpp  dirtyflagcontroller.h  eventlistcheck.cpp  eventlistcheck.h  eventlogdatabrowsersource.cpp  eventlogdatabrowsersource.h  eventlogger.cpp  eventlogger.h  factory.cpp  hostcheck.cpp  hostcheck.h  hostcheckercontroller.cpp  hostcheckercontroller.h  hostcheckerprocessor.cpp  hostcheckerprocessor.h  logevents.h  parameterchangescheck.cpp  parameterchangescheck.h  processcontextcheck.cpp  processcontextcheck.h  processsetupcheck.cpp  processsetupcheck.h  version.h
VST3_SDK/public.sdk/samples/vst/hostchecker/win/: hostchecker.def  hostchecker.sln  hostchecker.vcxproj  hostchecker.vcxproj.filters
VST3_SDK/public.sdk/samples/vst/mda-vst3/: CMakeLists.txt
VST3_SDK/public.sdk/samples/vst/mda-vst3/mac/: mda-vst3-Info.plist
VST3_SDK/public.sdk/samples/vst/mda-vst3/source/: mdaAmbienceProcessor.h  mdaBandistoProcessor.h  mdaBaseController.cpp  mdaBaseProcessor.cpp  mdaBaseProcessor.h  mdaBeatBoxProcessor.cpp  mdaBeatBoxProcessor.h  mdaComboProcessor.h  mdaDX10Controller.cpp  mdaDX10Processor.cpp  mdaDX10Processor.h  mdaDeEsserProcessor.h  mdaDegradeProcessor.h  mdaDelayProcessor.h  mdaDetuneProcessor.h  mdaDitherProcessor.cpp  mdaDitherProcessor.h  mdaDubDelayProcessor.h  mdaDynamicsProcessor.h  mdaEPianoProcessor.cpp  mdaEPianoProcessor.h  mdaImageProcessor.h  mdaJX10Controller.cpp  mdaJX10Processor.cpp  mdaJX10Processor.h  mdaLeslieProcessor.h  mdaLimiterProcessor.h  mdaLoudnessProcessor.h  mdaMultiBandProcessor.h  mdaOverdriveProcessor.h  mdaPianoProcessor.cpp  mdaPianoProcessor.h  mdaRePsychoProcessor.h  mdaRezFilterProcessor.cpp  mdaRezFilterProcessor.h  mdaRingModProcessor.h  mdaRoundPanProcessor.h  mdaShepardProcessor.h  mdaSpecMeterProcessor.h  mdaSplitterProcessor.h  (+10 more)
VST3_SDK/public.sdk/samples/vst/mda-vst3/win/: mda-vst3.def  mda-vst3.sln  mda-vst3.vcxproj  mda-vst3.vcxproj.filters  mda-vst3_vc10.sln  mda-vst3_vc10.vcxproj
VST3_SDK/public.sdk/samples/vst/note_expression_synth/: CMakeLists.txt
VST3_SDK/public.sdk/samples/vst/note_expression_synth/mac/: Info.plist
VST3_SDK/public.sdk/samples/vst/note_expression_synth/resource/: Info.plist  note_expression_synth.rc
VST3_SDK/public.sdk/samples/vst/note_expression_synth/source/: brownnoise.h  factory.cpp  filter.h  note_expression_synth_controller.cpp  note_expression_synth_controller.h  note_expression_synth_processor.cpp  note_expression_synth_processor.h  note_expression_synth_ui.cpp  note_expression_synth_ui.h  note_expression_synth_voice.cpp  note_expression_synth_voice.h  note_touch_controller.cpp  note_touch_controller.h  version.h
VST3_SDK/public.sdk/samples/vst/note_expression_synth/win/: note_expression_synth.rc  note_expression_synth.sln  note_expression_synth.vcxproj  note_expression_synth_vc10.sln  note_expression_synth_vc10.vcxproj  note_expression_synth_vc10.vcxproj.filters
VST3_SDK/public.sdk/samples/vst/note_expression_text/: CMakeLists.txt
VST3_SDK/public.sdk/samples/vst/note_expression_text/resource/: Info.plist
VST3_SDK/public.sdk/samples/vst/pitchnames/: CMakeLists.txt
VST3_SDK/public.sdk/samples/vst/validator/: CMakeLists.txt
(+8974 files in other folders)
